--- a/DigimonWorldNet6/Frontend.WPF/Windows/AboutAndCredits/AboutAndCreditsWindow.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/AboutAndCredits/AboutAndCreditsWindow.xaml
@@ -1,4 +1,4 @@
-<windows:BaseDialogWindow x:Class="DigimonWorld.Frontend.WPF.Windows.About.AboutWindow"
+<windows:BaseDialogWindow x:Class="DigimonWorld.Frontend.WPF.Windows.About.AboutAndCreditsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -7,7 +7,7 @@
         xmlns:about="clr-namespace:DigimonWorld.Frontend.WPF.Windows.About"
         xmlns:windows="clr-namespace:DigimonWorld.Frontend.WPF.Windows"
         mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance Type=about:AboutWindowViewModel, IsDesignTimeCreatable=True}"
+        d:DataContext="{d:DesignInstance Type=about:AboutAndCreditsWindowViewModel, IsDesignTimeCreatable=True}"
         Title="Configuration"
         ResizeMode="NoResize"
         SizeToContent="WidthAndHeight"
