--- a/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/GeneralConfigWindow.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/GeneralConfigWindow.xaml
@@ -47,7 +47,7 @@
                             </Grid.ColumnDefinitions>
                             <Grid Grid.Column="0" Grid.Row="0" Margin="10,0,10,10">
                                 <Grid.RowDefinitions>
-                                    <RowDefinition Height="60"></RowDefinition>
+                                    <RowDefinition Height="Auto"></RowDefinition>
                                     <RowDefinition Height="Auto"></RowDefinition>
                                 </Grid.RowDefinitions>
                                 <Grid.ColumnDefinitions>
@@ -74,12 +74,12 @@
                                 </StackPanel>
                             </Grid>
 
-                            <StackPanel Grid.Row="2" Grid.ColumnSpan="2" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10">
+                            <StackPanel Grid.Row="2" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10">
                                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                                     <Button Style="{StaticResource DefaultButtonStyle}"
                                             Height="{StaticResource DefaultButtonHeight}"
                                             Width="{StaticResource WindowButtonWidth}"
-                                            Margin="10, 0"
+                                            Margin="0, 0, 10, 0"
                                             Content="Save"
                                             Command="{Binding SaveCommand}" />
                                     <Button Style="{StaticResource DefaultButtonStyle}"
