--- a/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/GeneralConfigWindow.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/GeneralConfigWindow.xaml
@@ -1,20 +1,20 @@
 <windows:BaseDialogWindow x:Class="DigimonWorld.Frontend.WPF.Windows.GeneralConfig.GeneralConfigWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:generalConfig="clr-namespace:DigimonWorld.Frontend.WPF.Windows.GeneralConfig"
-        xmlns:system="clr-namespace:System;assembly=System.Runtime"
-        xmlns:windows="clr-namespace:DigimonWorld.Frontend.WPF.Windows"
-        mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance Type=generalConfig:GeneralConfigWindowViewModel, IsDesignTimeCreatable=True}"
-        Title="Configuration"
-        ResizeMode="NoResize"
-        SizeToContent="WidthAndHeight"
-        WindowStyle="None"
-        AllowsTransparency="True"
-        Background="Transparent"
-        WindowStartupLocation="Manual">
+                          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                          xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                          xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                          xmlns:generalConfig="clr-namespace:DigimonWorld.Frontend.WPF.Windows.GeneralConfig"
+                          xmlns:system="clr-namespace:System;assembly=System.Runtime"
+                          xmlns:windows="clr-namespace:DigimonWorld.Frontend.WPF.Windows"
+                          mc:Ignorable="d"
+                          d:DataContext="{d:DesignInstance Type=generalConfig:GeneralConfigWindowViewModel, IsDesignTimeCreatable=True}"
+                          Title="Configuration"
+                          ResizeMode="NoResize"
+                          SizeToContent="WidthAndHeight"
+                          WindowStyle="None"
+                          AllowsTransparency="True"
+                          Background="Transparent"
+                          WindowStartupLocation="Manual">
 
     <windows:BaseDialogWindow.Resources>
         <ResourceDictionary>
@@ -26,6 +26,7 @@
             </ResourceDictionary.MergedDictionaries>
 
             <system:Double x:Key="WindowButtonWidth">70</system:Double>
+            <system:Double x:Key="OptionButtonWidth">75</system:Double>
             <system:Double x:Key="OptionButtonHeight">22</system:Double>
         </ResourceDictionary>
     </windows:BaseDialogWindow.Resources>
@@ -34,60 +35,104 @@
         <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Background="Black">
             <Border CornerRadius="5" BorderBrush="#4A9FC5" BorderThickness="3" Background="#4A9FC5">
                 <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3" Background="#90D9FA">
-                    <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Background="Black">
-                        <Grid>
+                    <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Background="#2E3841">
+                        <Grid Margin="10, 0">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="*" />
                                 <RowDefinition Height="*" />
-                                <RowDefinition Height="60" />
+                                <RowDefinition Height="*" />
+                                <RowDefinition Height="*" />
+                                <RowDefinition Height="*" />
+                                <RowDefinition Height="*" />
+                                <RowDefinition Height="*" />
+                                <RowDefinition Height="*" />
                             </Grid.RowDefinitions>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*" />
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
-                            <Grid Grid.Column="0" Grid.Row="0" Margin="10,0,10,10">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="Auto"></RowDefinition>
-                                    <RowDefinition Height="Auto"></RowDefinition>
-                                </Grid.RowDefinitions>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="Auto" />
-                                    <ColumnDefinition Width="Auto" />
-                                </Grid.ColumnDefinitions>
-                                <Label Grid.Row="0" Grid.Column="0" Height="40" Width="150" HorizontalAlignment="Center" Style="{StaticResource DefaultSheenLabelStyle}" Content="NARRATION" />
-                                <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Horizontal" VerticalAlignment="Center">
-                                    <Label Style="{StaticResource DefaultLabelStyle}" Content="Narrator mode:" Margin="10, 0, 5, 0" />
-                                    <StackPanel Orientation="Horizontal">
-                                        <Button Style="{StaticResource DefaultOptionPickerButtonStyle}"
-                                                Height="{StaticResource OptionButtonHeight}"
-                                                Width="60"
-                                                Content="Speech"
-                                                Command="{Binding SetNarratorModeSpeechCommand}"
-                                                Tag="{Binding IsNarratorModeSpeech}" />
-                                        <Button Style="{StaticResource DefaultOptionPickerButtonStyle}"
-                                                Height="{StaticResource OptionButtonHeight}"
-                                                Width="60"
-                                                Content="Instant"
-                                                Command="{Binding SetNarratorModeInstantCommand}"
-                                                Tag="{Binding IsNarratorModeInstant}" />
-                                    </StackPanel>
-                                </StackPanel>
-                            </Grid>
+                            <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Height="40" Width="150" HorizontalAlignment="Center" Style="{StaticResource DefaultSheenLabelStyle}"
+                                   Content="NARRATION" />
+                            <Label Grid.Row="1" Grid.Column="0" Style="{StaticResource DefaultLabelStyle}" Content="Narrator mode:" Margin="0, 0, 5, 0" />
+                            <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center">
+                                <Button Style="{StaticResource DefaultOptionPickerButtonStyle}"
+                                        Height="{StaticResource OptionButtonHeight}"
+                                        Width="{StaticResource OptionButtonWidth}"
+                                        Content="Speech"
+                                        Command="{Binding SetNarratorModeSpeechCommand}"
+                                        Tag="{Binding IsNarratorModeSpeech}" />
+                                <Button Style="{StaticResource DefaultOptionPickerButtonStyle}"
+                                        Height="{StaticResource OptionButtonHeight}"
+                                        Width="{StaticResource OptionButtonWidth}"
+                                        Content="Instant"
+                                        Command="{Binding SetNarratorModeInstantCommand}"
+                                        Tag="{Binding IsNarratorModeInstant}" />
+                            </StackPanel>
 
-                            <StackPanel Grid.Row="2" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10">
-                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                                    <Button Style="{StaticResource DefaultButtonStyle}"
-                                            Height="{StaticResource DefaultButtonHeight}"
-                                            Width="{StaticResource WindowButtonWidth}"
-                                            Margin="0, 0, 10, 0"
-                                            Content="Save"
-                                            Command="{Binding SaveCommand}" />
-                                    <Button Style="{StaticResource DefaultButtonStyle}"
-                                            Height="{StaticResource DefaultButtonHeight}"
-                                            Width="{StaticResource WindowButtonWidth}"
-                                            Content="Cancel"
-                                            Command="{Binding CancelCommand}" />
-                                </StackPanel>
+                            <Label Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Height="40" Width="150" HorizontalAlignment="Center" Style="{StaticResource DefaultSheenLabelStyle}"
+                                   Content="JUKEBOX"
+                                   Margin="0, 20, 0, 5" />
+                            <Label Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" MaxWidth="200" Margin="0, 0, 0, 5">
+                                <TextBlock Text="These settings configure the behavior on startup." TextWrapping="Wrap" />
+                            </Label>
+                            <Label Grid.Row="4" Grid.Column="0" Style="{StaticResource DefaultLabelStyle}" Content="Mute:" Margin="0, 0, 5, 0" />
+                            <Label Grid.Row="5" Grid.Column="0" Style="{StaticResource DefaultLabelStyle}" Content="Shuffle mode:" Margin="0, 0, 5, 0" />
+                            <Label Grid.Row="6" Grid.Column="0" Style="{StaticResource DefaultLabelStyle}" Content="Repeat mode:" Margin="0, 0, 5, 0" />
+                            <StackPanel Grid.Row="4" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center">
+                                <Button Style="{StaticResource DefaultOptionPickerButtonStyle}"
+                                        Height="{StaticResource OptionButtonHeight}"
+                                        Width="{StaticResource OptionButtonWidth}"
+                                        Content="ON"
+                                        Command="{Binding SetMuteOnCommand}"
+                                        Tag="{Binding MuteIsOn}" />
+                                <Button Style="{StaticResource DefaultOptionPickerButtonStyle}"
+                                        Height="{StaticResource OptionButtonHeight}"
+                                        Width="{StaticResource OptionButtonWidth}"
+                                        Content="OFF"
+                                        Command="{Binding SetMuteOffCommand}"
+                                        Tag="{Binding MuteIsOff}" />
+                            </StackPanel>
+                            <StackPanel Grid.Row="5" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center">
+                                <Button Style="{StaticResource DefaultOptionPickerButtonStyle}"
+                                        Height="{StaticResource OptionButtonHeight}"
+                                        Width="{StaticResource OptionButtonWidth}"
+                                        Content="ON"
+                                        Command="{Binding SetShuffleModeOnCommand}"
+                                        Tag="{Binding ShuffleModeIsOn}" />
+                                <Button Style="{StaticResource DefaultOptionPickerButtonStyle}"
+                                        Height="{StaticResource OptionButtonHeight}"
+                                        Width="{StaticResource OptionButtonWidth}"
+                                        Content="OFF"
+                                        Command="{Binding SetShuffleModeOffCommand}"
+                                        Tag="{Binding ShuffleModeIsOff}" />
+                            </StackPanel>
+                            <StackPanel Grid.Row="6" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center">
+                                <Button Style="{StaticResource DefaultOptionPickerButtonStyle}"
+                                        Height="{StaticResource OptionButtonHeight}"
+                                        Width="{StaticResource OptionButtonWidth}"
+                                        Content="Single"
+                                        Command="{Binding SetRepeatModeSingleCommand}"
+                                        Tag="{Binding RepeatModeIsSingle}" />
+                                <Button Style="{StaticResource DefaultOptionPickerButtonStyle}"
+                                        Height="{StaticResource OptionButtonHeight}"
+                                        Width="{StaticResource OptionButtonWidth}"
+                                        Content="All"
+                                        Command="{Binding SetRepeatModeAllCommand}"
+                                        Tag="{Binding RepeatModeIsAll}" />
+                            </StackPanel>
+
+                            <StackPanel Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Horizontal" Margin="0, 20, 0, 10">
+                                <Button Style="{StaticResource DefaultButtonStyle}"
+                                        Height="{StaticResource DefaultButtonHeight}"
+                                        Width="{StaticResource WindowButtonWidth}"
+                                        Margin="0, 0, 10, 0"
+                                        Content="Save"
+                                        Command="{Binding SaveCommand}" />
+                                <Button Style="{StaticResource DefaultButtonStyle}"
+                                        Height="{StaticResource DefaultButtonHeight}"
+                                        Width="{StaticResource WindowButtonWidth}"
+                                        Content="Cancel"
+                                        Command="{Binding CancelCommand}" />
                             </StackPanel>
                         </Grid>
                     </Border>
