--- a/DigimonWorldNet6/Frontend.WPF/Windows/Main/MainWindow.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/Main/MainWindow.xaml
@@ -307,7 +307,7 @@
             <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Background="Black">
                 <Border CornerRadius="5" BorderBrush="#4A9FC5" BorderThickness="3" Background="#4A9FC5">
                     <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3" Background="#90D9FA">
-                        <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Background="Black">
+                        <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Background="#2E3841">
                             <evolutionTool:EvolutionToolUserControl />
                         </Border>
                     </Border>
