--- a/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/GeneralConfigWindow.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/GeneralConfigWindow.xaml
@@ -51,10 +51,16 @@
                                 <ColumnDefinition Width="*" />
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
-                            <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Height="40" Width="150" HorizontalAlignment="Center" Style="{StaticResource DefaultSheenLabelStyle}"
-                                   Content="NARRATION" />
-                            <Label Grid.Row="1" Grid.Column="0" Style="{StaticResource DefaultLabelStyle}" Content="Narrator mode:" Margin="0, 0, 5, 0" />
-                            <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center">
+                            <StackPanel Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Vertical">
+                                <Label Height="40" Width="230" HorizontalAlignment="Center" Style="{StaticResource DefaultSheenLabelStyle}" Margin="0,10,0, 0" Content="GENERAL CONFIGURATION" />
+                                <Label HorizontalAlignment="Center" MaxWidth="260">
+                                    <TextBlock Text="These settings reflect current behavior on and are applied on when the app starts." TextWrapping="Wrap" />
+                                </Label>
+                            </StackPanel>
+                            <Label Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Height="40" Width="150" HorizontalAlignment="Center" Style="{StaticResource DefaultSheenLabelStyle}"
+                                   Margin="0, 20, 0, 10" Content="NARRATION" />
+                            <Label Grid.Row="2" Grid.Column="0" Style="{StaticResource DefaultLabelStyle}" Content="Narrator mode:" Margin="0, 0, 5, 0" />
+                            <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center">
                                 <Button Style="{StaticResource DefaultOptionPickerButtonStyle}"
                                         Height="{StaticResource OptionButtonHeight}"
                                         Width="{StaticResource OptionButtonWidth}"
@@ -69,12 +75,9 @@
                                         Tag="{Binding IsNarratorModeInstant}" />
                             </StackPanel>
 
-                            <Label Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Height="40" Width="150" HorizontalAlignment="Center" Style="{StaticResource DefaultSheenLabelStyle}"
+                            <Label Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Height="40" Width="150" HorizontalAlignment="Center" Style="{StaticResource DefaultSheenLabelStyle}"
                                    Content="JUKEBOX"
-                                   Margin="0, 20, 0, 5" />
-                            <Label Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" MaxWidth="200" Margin="0, 0, 0, 5">
-                                <TextBlock Text="These settings configure the behavior on startup." TextWrapping="Wrap" />
-                            </Label>
+                                   Margin="0, 20, 0, 10" />
                             <Label Grid.Row="4" Grid.Column="0" Style="{StaticResource DefaultLabelStyle}" Content="Mute:" Margin="0, 0, 5, 0" />
                             <Label Grid.Row="5" Grid.Column="0" Style="{StaticResource DefaultLabelStyle}" Content="Shuffle mode:" Margin="0, 0, 5, 0" />
                             <Label Grid.Row="6" Grid.Column="0" Style="{StaticResource DefaultLabelStyle}" Content="Repeat mode:" Margin="0, 0, 5, 0" />
