--- a/DigimonWorldNet6/Frontend.WPF/Windows/AboutAndCredits/AboutAndCreditsWindow.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/AboutAndCredits/AboutAndCreditsWindow.xaml
@@ -1,13 +1,13 @@
-<windows:BaseDialogWindow x:Class="DigimonWorld.Frontend.WPF.Windows.About.AboutAndCreditsWindow"
+<windows:BaseDialogWindow x:Class="DigimonWorld.Frontend.WPF.Windows.AboutAndCredits.AboutAndCreditsWindow"
                           xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                           xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                           xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                           xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                           xmlns:system="clr-namespace:System;assembly=System.Runtime"
-                          xmlns:about="clr-namespace:DigimonWorld.Frontend.WPF.Windows.About"
                           xmlns:windows="clr-namespace:DigimonWorld.Frontend.WPF.Windows"
+                          xmlns:aboutAndCredits="clr-namespace:DigimonWorld.Frontend.WPF.Windows.AboutAndCredits"
                           mc:Ignorable="d"
-                          d:DataContext="{d:DesignInstance Type=about:AboutAndCreditsWindowViewModel, IsDesignTimeCreatable=True}"
+                          d:DataContext="{d:DesignInstance Type=aboutAndCredits:AboutAndCreditsWindowViewModel, IsDesignTimeCreatable=True}"
                           Title="Configuration"
                           ResizeMode="NoResize"
                           SizeToContent="WidthAndHeight"
@@ -24,6 +24,7 @@
                 <ResourceDictionary Source="../../ResourceDictionaries/Styles/Buttons/DefaultOptionPickerButtonStyle.xaml" />
                 <ResourceDictionary Source="../../ResourceDictionaries/Styles/Labels/DefaultSheenLabelStyle.xaml" />
                 <ResourceDictionary Source="../../ResourceDictionaries/Styles/Labels/DefaultLabelStyle.xaml" />
+                <ResourceDictionary Source="../../ResourceDictionaries/Styles/DefaultTooltipStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
             <system:Double x:Key="WindowButtonWidth">70</system:Double>
@@ -32,6 +33,10 @@
         </ResourceDictionary>
     </windows:BaseDialogWindow.Resources>
 
+    <Window.InputBindings>
+        <KeyBinding Key="Escape" Command="{Binding CloseWindowCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}" />
+    </Window.InputBindings>
+
     <Border Background="Transparent" Panel.ZIndex="1">
         <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Background="Black">
             <Border CornerRadius="5" BorderBrush="#4A9FC5" BorderThickness="3" Background="#4A9FC5">
@@ -39,11 +44,6 @@
                     <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Background="#2E3841">
                         <Grid>
                             <Grid.RowDefinitions>
-                                <RowDefinition Height="*" />
-                                <RowDefinition Height="*" />
-                                <RowDefinition Height="*" />
-                                <RowDefinition Height="*" />
-                                <RowDefinition Height="*" />
                                 <RowDefinition Height="*" />
                                 <RowDefinition Height="*" />
                                 <RowDefinition Height="*" />
@@ -110,10 +110,10 @@
                             <Label Grid.Row="12" Grid.Column="0" Style="{StaticResource DefaultLabelStyle}" Content="Digimon images:" Margin="10, 0, 5, 0" />
                             <Label Grid.Row="7" Grid.Column="1" HorizontalAlignment="Left" Style="{StaticResource DefaultLabelStyle}" Content="Flaminamigo" />
                             <Label Grid.Row="8" Grid.Column="1" HorizontalAlignment="Left" Style="{StaticResource DefaultLabelStyle}" Content="Flaminamigo" />
-                            <Label Grid.Row="9" Grid.Column="1"  HorizontalAlignment="Left" Style="{StaticResource DefaultLabelStyle}" Content="Harceru" />
-                            <Label Grid.Row="10" Grid.Column="1"  HorizontalAlignment="Left" Style="{StaticResource DefaultLabelStyle}" Content="Rommstar (evolution sprites)" />
-                            <Label Grid.Row="11" Grid.Column="1"  HorizontalAlignment="Left" Style="{StaticResource DefaultLabelStyle}" Content="www.digimon.fandom.com" />
-                            <Label Grid.Row="12" Grid.Column="1"  HorizontalAlignment="Left" Style="{StaticResource DefaultLabelStyle}" Content="www.grindosaur.com" />
+                            <Label Grid.Row="9" Grid.Column="1" HorizontalAlignment="Left" Style="{StaticResource DefaultLabelStyle}" Content="Harceru" />
+                            <Label Grid.Row="10" Grid.Column="1" HorizontalAlignment="Left" Style="{StaticResource DefaultLabelStyle}" Content="Rommstar (evolution sprites)" />
+                            <Label Grid.Row="11" Grid.Column="1" HorizontalAlignment="Left" Style="{StaticResource DefaultLabelStyle}" Content="www.digimon.fandom.com" />
+                            <Label Grid.Row="12" Grid.Column="1" HorizontalAlignment="Left" Style="{StaticResource DefaultLabelStyle}" Content="www.grindosaur.com" />
 
                             <Button Grid.Row="13" Grid.Column="0" Grid.ColumnSpan="2" Style="{StaticResource DefaultButtonStyle}"
                                     HorizontalAlignment="Center"
@@ -121,7 +121,11 @@
                                     Width="{StaticResource WindowButtonWidth}"
                                     Margin="0, 15, 0, 10"
                                     Content="Close"
-                                    Command="{Binding CloseWindowCommand}" />
+                                    Command="{Binding CloseWindowCommand}">
+                                <Button.ToolTip>
+                                    <ToolTip Style="{StaticResource DefaultToolTipStyle}" Content="Exit this window. (hotkey: ESC)" />
+                                </Button.ToolTip>
+                            </Button>
                         </Grid>
                     </Border>
                 </Border>
