Tabbing will now only focus the evolution tool fields and button.

--- a/DigimonWorldNet6/Frontend.WPF/ResourceDictionaries/Styles/DefaultComboboxStyle.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/ResourceDictionaries/Styles/DefaultComboboxStyle.xaml
@@ -19,7 +19,7 @@
                                               BorderThickness="0"
                                               IsChecked="{Binding IsDropDownOpen, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"
                                               Content="{TemplateBinding SelectionBoxItem}"
-                                              ContentTemplate="{TemplateBinding SelectionBoxItemTemplate}">
+                                              ContentTemplate="{TemplateBinding SelectionBoxItemTemplate}" IsTabStop="False">
                                     <ToggleButton.Template>
                                         <ControlTemplate TargetType="ToggleButton">
                                             <Border Name="ToggleButtonBorder"
