--- a/DigimonWorldNet6/Frontend.WPF/UserControls/HistoricEvolutionPicker/HistoricEvolutionPickerUserControl.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/UserControls/HistoricEvolutionPicker/HistoricEvolutionPickerUserControl.xaml
@@ -9,7 +9,7 @@
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance Type=historicEvolutionPicker:HistoricEvolutionPickerViewModel, IsDesignTimeCreatable=True}">
 
-    <Grid>
+    <Grid KeyboardNavigation.TabNavigation="None">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="Auto" />
