--- a/DigimonWorldNet6/Frontend.WPF/UserControls/MusicPlayer/MusicPlayerUserControl.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/UserControls/MusicPlayer/MusicPlayerUserControl.xaml
@@ -26,7 +26,7 @@
         </ResourceDictionary>
     </UserControl.Resources>
 
-    <Grid>
+    <Grid KeyboardNavigation.TabNavigation="None">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
